fixed import and getFirst